# cc-fastapi

./: LICENSE  README.md  cookiecutter.json
.github/: dependabot.yml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: Makefile  pyproject.toml
{{cookiecutter.project_slug}}/tests/health/: test_api.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: config.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/health/: api.py
{{cookiecutter.repo_dir}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  env.sample  pyproject.toml
{{cookiecutter.repo_dir}}/.github/: dependabot.yml
{{cookiecutter.repo_dir}}/.github/workflows/: ci.yml
{{cookiecutter.repo_dir}}/tests/health/: test_api.py
{{cookiecutter.repo_dir}}/tests/tasks/: test_api.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/: config.py  main.py  worker.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/common/clients/: sentry.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/health/: api.py
{{cookiecutter.repo_dir}}/{{cookiecutter.package_dir}}/tasks/: api.py  api_format.py
