[project]
name = "{{cookiecutter.package_dir}}"
version = "{{cookiecutter._version}}"
description = "{{cookiecutter.description}}"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
celery = '*'
fastapi = '*'
httpx = '*'
pydantic = '*'
pydantic-settings = '*'
pytest  = '*'
python = '^3.12'
redis = '*'
uvicorn = {version = '*', extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = { version = '*', extras = ['toml'] }
flake8 = "*"
import-linter = '*'
isort = "*"
mypy = "*"
pre-commit = '*'
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
respx = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 130
known_first_party = ["{{cookiecutter.package_dir}}"]

[tool.mypy]
python_version = "3.12"
disallow_any_unimported = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = [
    'pydantic.mypy',
]

[tool.importlinter]
root_package = "{{cookiecutter.package_dir}}"